--- a/source/latex/header.tex
+++ b/source/latex/header.tex
@@ -144,7 +144,7 @@
       {Ph.D. and M.S. in Electrical Engineering}{Feb. 2009 -- Aug. 2015}
         \resumeItemListStart
         \resumeItem{Ph.D. thesis: Image-based 3D Modeling via Constrained Optimization (Advisor: Prof. In So Kweon)}
-        \resumeItem{Master's thesis: Upsampling Low-resolution Image using Heterogeneous High-resolution Image}
+        \resumeItem{Master's thesis: Upsampling Low-resolution Image using Heterogeneous High-resolution Image (Advisor: Prof. In So Kweon, Co-advisor: Dr. Yu-Wing Tai)}
         \resumeItemListEnd
     \resumeSubheading
       {Hanyang University}{Seoul, Republic of Korea}
