--- a/source/latex/patents.tex
+++ b/source/latex/patents.tex
@@ -1,5 +1,6 @@
 \section{Patents}
 \resumeItemListStart
+    \resumeItem{대조 학습과 적대적 생성 신경망을 활용한 이미지 생성 및 편집 방법과 장치, Republic of Korea, }
     \resumeItem{Tangent Convolutions for 3D Data, US10572770B2, (Application granted), }
     \resumeItem{깊이 정보 획득 장치 및 깊이 정보 획득 방법 (Depth Map Acquisition Device And Depth Map Acquisition Method), Patent No. 1018520850000, Republic of Korea, (Application granted), }
     \resumeItem{삼차원 영상 정보 획득 방법 및 이를 구현한 컴퓨팅 장치 (Method For Acquiring Three Dimensional Image Information, And Computing Device Implementing The Same Method), Patent No. 1017652570000, Republic of Korea (Application granted), }
