--- a/cv.tex
+++ b/cv.tex
@@ -144,7 +144,7 @@
       {Ph.D. and M.S. in Electrical Engineering}{Feb. 2009 -- Aug. 2015}
         \resumeItemListStart
         \resumeItem{Ph.D. thesis: Image-based 3D Modeling via Constrained Optimization (Advisor: Prof. In So Kweon)}
-        \resumeItem{Master's thesis: Upsampling Low-resolution Image using Heterogeneous High-resolution Image}
+        \resumeItem{Master's thesis: Upsampling Low-resolution Image using Heterogeneous High-resolution Image (Advisor: Prof. In So Kweon, Co-advisor: Dr. Yu-Wing Tai)}
         \resumeItemListEnd
     \resumeSubheading
       {Hanyang University}{Seoul, Republic of Korea}
@@ -158,6 +158,7 @@
 
 International
 \resumePublicationListStart
+    \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{STAD: Stable Video Depth Estimation}{IEEE International Conference on Image Processing (ICIP), 2021}
     \publicationItem{Taewon Jin, Taesoo Park, Ina Park, \textbf{Jaesik Park}, and Ji Hoon Shim}{Accelerated Crystal Structure Prediction of Multi-elements Random Alloy using Expandable Features}{\textbf{Scientific Reports} published by Nature Research, 2021}
     \publicationItem{Hyomin Kim, Jungeon Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{Spatiotemporal Texture Reconstruction for Dynamic Objects Using a Single RGB-D Camera}{42nd Annual Conference of the European Association for Computer Graphics (\textbf{EuroGraphics}), 2021}
     \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{High-quality Frame Interpolation via Tridirectional Inference}{Winter Conference on Applications of Computer Vision (\textbf{WACV}), 2021}
@@ -263,6 +264,7 @@ Domestic
 
 \section{Patents}
 \resumeItemListStart
+    \resumeItem{대조 학습과 적대적 생성 신경망을 활용한 이미지 생성 및 편집 방법과 장치, Republic of Korea, }
     \resumeItem{Tangent Convolutions for 3D Data, US10572770B2, (Application granted), }
     \resumeItem{깊이 정보 획득 장치 및 깊이 정보 획득 방법 (Depth Map Acquisition Device And Depth Map Acquisition Method), Patent No. 1018520850000, Republic of Korea, (Application granted), }
     \resumeItem{삼차원 영상 정보 획득 방법 및 이를 구현한 컴퓨팅 장치 (Method For Acquiring Three Dimensional Image Information, And Computing Device Implementing The Same Method), Patent No. 1017652570000, Republic of Korea (Application granted), }
@@ -293,11 +295,11 @@ Domestic
 
 \section{Talks}
 \resumeItemListStart
-    \resumeItem{Self-Calibrating Neural Radiance Fields, Korea Institute of Science and Technology (KIST), June 2021}
-    \resumeItem{Mentor session: how to become a professor, Conference on Computer Vision and Pattern Recognition (CVPR 2021), June 2021}
-    \resumeItem{Recent work on Image Generation, Gwangju Institute of Science and Technology (GIST), May 2021}
-    \resumeItem{Point Cloud Registration using Hierachical Hough Transform, 33nd Workshop on Image Processing and Image Understanding (IPIU2021), Feb. 2021}
-    \resumeItem{3D Representations and Detections, Chungbuk University, Chungju, Republic of Korea, Jan. 2021}
+    \resumeItem{Self-Calibrating Neural Radiance Fields, Korea Institute of Science and Technology (KIST), Virtual, June 2021}
+    \resumeItem{Mentor session: how to become a professor, Conference on Computer Vision and Pattern Recognition (CVPR 2021), Virtual, June 2021}
+    \resumeItem{Recent work on Image Generation, Gwangju Institute of Science and Technology (GIST), Virtual, May 2021}
+    \resumeItem{Point Cloud Registration using Hierachical Hough Transform, 33nd Workshop on Image Processing and Image Understanding (IPIU2021), Virtual, Feb. 2021}
+    \resumeItem{3D Representations and Detections, Chungbuk University, Virtual, Jan. 2021}
     \resumeItem{Introduction to Computer Vision, Kyungbuk Science High School, Pohang, Republic of Korea, Aug. 2020}
     \resumeItem{High-Dimensional Convolutional Networks for Geometric Pattern Recognition, KCCV 2020, Seoul, Republic of Korea, Aug. 2020}
     \resumeItem{Object Detection from Images or Point Clouds, LG Electronics, Seoul, Republic of Korea, Aug. 2020}
