--- a/source/latex/awards.tex
+++ b/source/latex/awards.tex
@@ -1,5 +1,6 @@
 \section{Awards}
 \resumeItemListStart
+    \resumeItem{Representative research achievements, POSTECH, July 2021}
     \resumeItem{Qualcomm Gift Grant, Qualcomm Corporation, Dec. 2020}
     \resumeItem{Faculty Support Program, Intel Corporation, June 2020}
     \resumeItem{Outstanding Online Class Award, Awarded to five classes among ~170 classes, July 2020}
