--- a/source/latex/publication.tex
+++ b/source/latex/publication.tex
@@ -58,6 +58,7 @@ Domestic
     \publicationItem{Hyunsoo Chung, Jungtaek Kim, Jinhwi Lee, \textbf{Jaesik Park}, and Minsu Cho}{강화학습을 이용한 그래프 표현 기반의 3차원 물체 생성}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
     \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{일관된 비디오 뎁스 맵 추정을 위한 시간 어텐션 모듈}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
     \publicationItem{Jungeon Kim, Hyomin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{동적 객체에 대한 전역 텍스쳐 맵 생성}{제 32회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2020}
+    \publicationItem{Jungeon Kim, Hyomin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{메시 피라미드를 활용한 3차원 비강체 모델 텍스쳐 맵 생성}{한국컴퓨터그래픽스학회, Jul 2019}
     \publicationItem{Min-Hyun Kim, \textbf{Jaesik Park}, and In So Kweon}{깊이 영상 처리를 위한 학습기반 신뢰도 추정 및 재질 분류}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
     \publicationItem{Junsik Kim, Kyungdon Joo, Tae-Hyun Oh, \textbf{Jaesik Park}, and In So Kweon}{시야 공유가 없는 다중 카메라를 이용한 사람 추적}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
     \publicationItem{SoonMin Hwang, \textbf{Jaesik Park}, Namil Kim, Yukyung Choi, and In So Kweon}{컬러-열영상 퓨전을 통한 강인한 보행자 검출 기법}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
