--- a/source/latex/publication.tex
+++ b/source/latex/publication.tex
@@ -6,7 +6,7 @@ International
 \resumePublicationListStart
     \publicationItem{Yoonwoo Jeong, Seokjun Ahn, Christopher Choy, Animashree Anandkumar, Minsu Cho, and \textbf{Jaesik Park}}{Self-Calibrating Neural Radiance Fields}{International Conference on Computer Vision (\textbf{ICCV}), 2021}
     \publicationItem{Junha Lee, Seungwook Kim, Minsu Cho, and \textbf{Jaesik Park}}{Deep Hough Voting for Robust Global Registration}{International Conference on Computer Vision (\textbf{ICCV}), 2021}
-    \publicationItem{Hyomin Kim, Jungeon Kim, Jaewon Kam, \textbf{Jaesik Park}, and Seungyong Lee}{Deep Virtual Markers for Articulated 3D Shapes}{International Conference on Computer Vision (\textbf{ICCV}), 2021}
+    \publicationItem{Hyomin Kim, Jungeon Kim, Jaewon Kam, \textbf{Jaesik Park}*, and Seungyong Lee*}{Deep Virtual Markers for Articulated 3D Shapes}{International Conference on Computer Vision (\textbf{ICCV}), 2021}
     \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{STAD: Stable Video Depth Estimation}{IEEE International Conference on Image Processing (\textbf{ICIP}), 2021}
     \publicationItem{Taewon Jin, Taesoo Park, Ina Park, \textbf{Jaesik Park}, and Ji Hoon Shim}{Accelerated Crystal Structure Prediction of Multi-elements Random Alloy using Expandable Features}{\textbf{Scientific Reports} published by Nature Research, 2021}
     \publicationItem{Hyomin Kim, Jungeon Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{Spatiotemporal Texture Reconstruction for Dynamic Objects Using a Single RGB-D Camera}{42nd Annual Conference of the European Association for Computer Graphics (\textbf{EuroGraphics}), 2021}
