--- a/cv.tex
+++ b/cv.tex
@@ -226,6 +226,8 @@ Domestic
 
 \section{Program Committee}
 \resumeItemListStart
+    \resumeItem{Associate Editor, IEEE International Conference on Robotics and Automation (ICRA),  2021}
+    \resumeItem{Associate Editor, IEEE/RSJ International Conference on Inteligent Robotics and Systems (IROS),  2021}
     \resumeItem{Area Chair, Machine Vision Applications (MVA) conference,  2021}
     \resumeItem{Area Chair, International Conference on Computer Vision and Pattern Recognition (CVPR),  2021}
     \resumeItem{Area Chair, International Conference on Computer Vision (ICCV),  2021}
@@ -283,6 +285,8 @@ Domestic
 
 \section{Teaching}
 \resumeItemListStart
+    \resumeItem{AIGS101 Artifical Intelligence Basis II, Fall,  2021}
+    \resumeItem{CSED703F Topics in AI: 3D Vision, Fall,  2021}
     \resumeItem{AIGS101 Artifical Intelligence Basis I, Spring,  2021}
     \resumeItem{CSED538/AIGS538 Deep learning, Spring,  2021}
     \resumeItem{AIGS101, Artifical Intelligence Basis II, Fall,  2020}
