--- a/source/latex/teaching.tex
+++ b/source/latex/teaching.tex
@@ -1,5 +1,7 @@
 \section{Teaching}
 \resumeItemListStart
+    \resumeItem{AIGS101 Artifical Intelligence Basis II, Fall,  2021}
+    \resumeItem{CSED703F Topics in AI: 3D Vision, Fall,  2021}
     \resumeItem{AIGS101 Artifical Intelligence Basis I, Spring,  2021}
     \resumeItem{CSED538/AIGS538 Deep learning, Spring,  2021}
     \resumeItem{AIGS101, Artifical Intelligence Basis II, Fall,  2020}
