--- a/source/latex/program_committe.tex
+++ b/source/latex/program_committe.tex
@@ -1,5 +1,7 @@
 \section{Program Committee}
 \resumeItemListStart
+    \resumeItem{Associate Editor, IEEE International Conference on Robotics and Automation (ICRA),  2021}
+    \resumeItem{Associate Editor, IEEE/RSJ International Conference on Inteligent Robotics and Systems (IROS),  2021}
     \resumeItem{Area Chair, Machine Vision Applications (MVA) conference,  2021}
     \resumeItem{Area Chair, International Conference on Computer Vision and Pattern Recognition (CVPR),  2021}
     \resumeItem{Area Chair, International Conference on Computer Vision (ICCV),  2021}
