--- a/source/latex/awards.tex
+++ b/source/latex/awards.tex
@@ -1,9 +1,10 @@
 \section{Awards}
 \resumeItemListStart
+    \resumeItem{Best EduTech Award, POSTECH, Oct. 2021}
     \resumeItem{Representative research achievements, POSTECH, July 2021}
     \resumeItem{Qualcomm Gift Grant, Qualcomm Corporation, Dec. 2020}
     \resumeItem{Faculty Support Program, Intel Corporation, June 2020}
-    \resumeItem{Outstanding Online Class Award, Awarded to five classes among ~170 classes, July 2020}
+    \resumeItem{Outstanding Online Class Award, Awarded to five classes among 170 classes, POSTECH, July 2020}
     \resumeItem{Google Season of Docs, Google Corporation, Technical writer support for Open3D, Apr. 2019}
     \resumeItem{Qualcomm Gift Grant, Qualcomm Corporation, Sep. 2019}
     \resumeItem{Research Velocity Challenge Award, Intel Corporation, Dec. 2018}
