--- a/source/latex/header.tex
+++ b/source/latex/header.tex
@@ -123,32 +123,32 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Assistant Professor}{Pohang, Republic of Korea}
-      {Computer Vision Lab, Pohang University of Science and Technology (POSTECH)}{April. 2019 -- Present}
+      {Computer Vision Lab, Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{April. 2019 -- Present}
         \resumeItemListStart
             \resumeItem{Principal investigator tackling various computer vision problems}
-            \resumeItem{3D scene understanding, generative models.}
+            \resumeItem{3D scene understanding and generative models}
         \resumeItemListEnd
     \resumeSubheading
       {Staff Research Scientist}{Santa Clara, CA, USA}
       {Intelligent Systems Lab, Intel}{Dec. 2015 -- March 2019}
         \resumeItemListStart
             \resumeItem{Devoted to basic computer vision research (Manager: Dr. Vladlen Koltun)}
-            \resumeItem{Co-founder of Open3D. Tanks and Temples. Efficient point set registration techniques.}
+            \resumeItem{Co-founder of Open3D. 3D vision projects}
         \resumeItemListEnd
   \resumeSubHeadingListEnd
 
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Korea Advanced Institute of Science and Technology (KAIST)}{Daejeon, Republic of Korea}
-      {Ph.D. and M.S. in Electrical Engineering}{Feb. 2009 -- Aug. 2015}
+      {Ph.D. and M.S. in Electrical Eng.}{Daejeon, Republic of Korea}
+      {Korea Advanced Institute of Science and Technology \textnormal{(\textbf{KAIST})}}{Feb. 2009 -- Aug. 2015}
         \resumeItemListStart
-        \resumeItem{Ph.D. thesis: Image-based 3D Modeling via Constrained Optimization (Advisor: Prof. In So Kweon)}
-        \resumeItem{Master's thesis: Upsampling Low-resolution Image using Heterogeneous High-resolution Image (Advisor: Prof. In So Kweon, Co-advisor: Dr. Yu-Wing Tai)}
+        \resumeItem{Ph.D. thesis: Image-based 3D Modeling via Constrained Optimization (Advisor: Prof. In So Kweon, Co-advisor: Dr. Yu-Wing Tai)}
+        \resumeItem{Master's thesis: Upsampling Low-resolution Image using Heterogeneous High-resolution Image (Advisor: Prof. In So Kweon)}
         \resumeItemListEnd
     \resumeSubheading
-      {Hanyang University}{Seoul, Republic of Korea}
-      {B.E. in Media Communication Eng. (\textbf{Summa cum laude})}{March. 2005 -- Feb. 2009}
+      {B.E. in Media Communication Eng.}{Seoul, Republic of Korea}
+      {Hanyang University (\textbf{Summa cum laude})}{March. 2005 -- Feb. 2009}
   \resumeSubHeadingListEnd
 
   
