updates on Latex and webpage

--- a/source/latex/header.tex
+++ b/source/latex/header.tex
@@ -66,9 +66,9 @@
   }
 }
 
-\newcommand{\publicationItem}[3]{
+\newcommand{\publicationItem}[4]{
   \small{
-  \item{#1\\ \emph{#2}\\ #3\vspace{-2pt}}
+  \item{#1\\ \emph{#2}\\ #3\\ #4}
   }
 }
 
@@ -123,17 +123,24 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Assistant Professor}{Pohang, Republic of Korea}
-      {Computer Vision Lab, Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{April. 2019 -- Present}
+      {Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{April. 2019 -- Present}
         \resumeItemListStart
-            \resumeItem{Principal investigator tackling various computer vision problems}
-            \resumeItem{3D scene understanding and generative models}
+          \resumeItem{Co-principal investigator of Computer Vision Lab.}
+          \resumeItem{Advising about 20 masters and Ph.D. students}
+          \resumeItem{Selected as one of the \textbf{POSTECH's Representative Research Achievements} (2021)}
+          \resumeItem{Received \textbf{Outstanding Online Class award} (2020) and \textbf{the Best EduTech award} (2021)}
+          \resumeItem{3D scene reconstruction, understanding, and assembly projects}
+          \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} projects receives 1.9k GitHub stars}
         \resumeItemListEnd
     \resumeSubheading
       {Staff Research Scientist}{Santa Clara, CA, USA}
-      {Intelligent Systems Lab, Intel}{Dec. 2015 -- March 2019}
+      {Intelligent Systems Lab, Intel (Manager: Dr. Vladlen Koltun)}{Dec. 2015 -- March 2019}
         \resumeItemListStart
-            \resumeItem{Devoted to basic computer vision research (Manager: Dr. Vladlen Koltun)}
-            \resumeItem{Co-founder of Open3D. 3D vision projects}
+          \resumeItem{\textbf{Co-founder of Open3D}: open-sourced 3D vision library, built from scratch, and receives 5.6k GitHub stars}
+          \resumeItem{Tanks and Temples: web-based photogrametry evaluation system}
+          \resumeItem{High quality 3D reconstruction algorithms}
+          \resumeItem{Geometry understanding: tangent convolutions and geometric features}
+          \resumeItem{Advised intern students from Stanford University, U.C. Berkeley, and Carnegie Melon University}
         \resumeItemListEnd
   \resumeSubHeadingListEnd
 
