--- a/source/latex/teaching.tex
+++ b/source/latex/teaching.tex
@@ -3,14 +3,14 @@
     \resumeItem{AIGS101 Artifical Intelligence Basis II, Fall,  2021}
     \resumeItem{CSED703F Topics in AI: 3D Vision, Fall,  2021}
     \resumeItem{AIGS101 Artifical Intelligence Basis I, Spring,  2021}
-    \resumeItem{CSED538/AIGS538 Deep learning, Spring,  2021}
+    \resumeItem{CSED538/AIGS538 Deep learning, \emph{\textbf{Awarded as the Best EduTech Class} by POSTECH}, Spring,  2021}
     \resumeItem{AIGS101, Artifical Intelligence Basis II, Fall,  2020}
     \resumeItem{CSED100, Introduction to Computer Science Engineering, Fall,  2020}
     \resumeItem{CSED703F, 3D Vision, Fall,  2020}
     \resumeItem{CSED800/AIGS800, CSE/GSAI Colloquium, Fall,  2020}
     \resumeItem{AIGS101, Artifical Intelligence Basis I, Spring,  2020}
     \resumeItem{AIGS537/CSED537, Artificial Intelligence and Data Science, 2020 Spring, Spring,  2020}
-    \resumeItem{CSED233, Data Structure, Spring, (Awarded as the outstanding online class),  2020}
+    \resumeItem{CSED233, Data Structure, \emph{\textbf{Awarded as the Outstanding Online Class} by POSTECH}, Spring,  2020}
     \resumeItem{CSED703F-01 3D Vision, Fall,  2019}
 \resumeItemListEnd
 
