--- a/cv.tex
+++ b/cv.tex
@@ -66,9 +66,9 @@
   }
 }
 
-\newcommand{\publicationItem}[3]{
+\newcommand{\publicationItem}[4]{
   \small{
-  \item{#1\\ \emph{#2}\\ #3\vspace{-2pt}}
+  \item{#1\\ \emph{#2}\\ #3\\ #4}
   }
 }
 
@@ -123,17 +123,24 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Assistant Professor}{Pohang, Republic of Korea}
-      {Computer Vision Lab, Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{April. 2019 -- Present}
+      {Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{April. 2019 -- Present}
         \resumeItemListStart
-            \resumeItem{Principal investigator tackling various computer vision problems}
-            \resumeItem{3D scene understanding and generative models}
+          \resumeItem{Co-principal investigator of Computer Vision Lab.}
+          \resumeItem{Advising about 20 masters and Ph.D. students}
+          \resumeItem{Selected as one of the \textbf{POSTECH's Representative Research Achievements} (2021)}
+          \resumeItem{Received \textbf{Outstanding Online Class award} (2020) and \textbf{the Best EduTech award} (2021)}
+          \resumeItem{3D scene reconstruction, understanding, and assembly projects}
+          \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} projects receives 1.9k GitHub stars}
         \resumeItemListEnd
     \resumeSubheading
       {Staff Research Scientist}{Santa Clara, CA, USA}
-      {Intelligent Systems Lab, Intel}{Dec. 2015 -- March 2019}
+      {Intelligent Systems Lab, Intel (Manager: Dr. Vladlen Koltun)}{Dec. 2015 -- March 2019}
         \resumeItemListStart
-            \resumeItem{Devoted to basic computer vision research (Manager: Dr. Vladlen Koltun)}
-            \resumeItem{Co-founder of Open3D. 3D vision projects}
+          \resumeItem{\textbf{Co-founder of Open3D}: open-sourced 3D vision library, built from scratch, and receives 5.6k GitHub stars}
+          \resumeItem{Tanks and Temples: web-based photogrametry evaluation system}
+          \resumeItem{High quality 3D reconstruction algorithms}
+          \resumeItem{Geometry understanding: tangent convolutions and geometric features}
+          \resumeItem{Advised intern students from Stanford University, U.C. Berkeley, and Carnegie Melon University}
         \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -154,58 +161,56 @@
   
 \section{Publications}
 
-
-
-International
+International~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~(* decleares co-first authors or co-corresponding authors)
 \resumePublicationListStart
-    \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{Self-Supervised Real-time Video Stabilization}{The British Machine Vision Conference (\textbf{BMVC}), 2021}
-    \publicationItem{Jungeon Kim, Hyomin Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{TextureMe: High-quality Textured Scene Reconstruction in Real-time}{ACM Transactions on Graphics (\textbf{ToG}), 2021}
-    \publicationItem{Minguk Kang, Woohyeon Joseph Shim, Minsu Cho, and \textbf{Jaesik Park}}{Rebooting ACGAN: Auxiliary Classifier GANs with Stable Training}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}
-    \publicationItem{Hyunsoo Chung, Jungtaek Kim, Boris Knyazev, Jinhwi Lee, Graham W. Taylor, \textbf{Jaesik Park}, and Minsu Cho}{Brick-by-Brick: Combinatorial Construction with Deep Reinforcement Learning}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}
-    \publicationItem{Yoonwoo Jeong, Seokjun Ahn, Christopher Choy, Animashree Anandkumar, Minsu Cho, and \textbf{Jaesik Park}}{Self-Calibrating Neural Radiance Fields}{International Conference on Computer Vision (\textbf{ICCV}), 2021}
-    \publicationItem{Junha Lee, Seungwook Kim, Minsu Cho, and \textbf{Jaesik Park}}{Deep Hough Voting for Robust Global Registration}{International Conference on Computer Vision (\textbf{ICCV}), 2021}
-    \publicationItem{Hyomin Kim, Jungeon Kim, Jaewon Kam, \textbf{Jaesik Park}*, and Seungyong Lee*}{Deep Virtual Markers for Articulated 3D Shapes}{International Conference on Computer Vision (\textbf{ICCV}), 2021}
-    \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{STAD: Stable Video Depth Estimation}{IEEE International Conference on Image Processing (\textbf{ICIP}), 2021}
-    \publicationItem{Taewon Jin, Taesoo Park, Ina Park, \textbf{Jaesik Park}*, and Ji Hoon Shim*}{Accelerated Crystal Structure Prediction of Multi-elements Random Alloy using Expandable Features}{\textbf{Scientific Reports} published by Nature Research, 2021}
-    \publicationItem{Hyomin Kim, Jungeon Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{Spatiotemporal Texture Reconstruction for Dynamic Objects Using a Single RGB-D Camera}{42nd Annual Conference of the European Association for Computer Graphics (\textbf{EuroGraphics}), 2021}
-    \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{High-quality Frame Interpolation via Tridirectional Inference}{Winter Conference on Applications of Computer Vision (\textbf{WACV}), 2021}
-    \publicationItem{Minguk Kang and \textbf{Jaesik Park}}{ContraGAN: Contrastive Learning for Conditional Image Generation}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2020}
-    \publicationItem{Jungtaek Kim, Hyunsoo Chung, Minsu Cho, and \textbf{Jaesik Park}}{Combinatorial 3D Shape Generation via Sequential Assembly}{Machine Learning for Engineering Modeling, Simulation, and Design (ML4Eng, \textbf{NeurIPS workshop}), 2020}
-    \publicationItem{Jinhwi Lee*, Jungtaek Kim*, Hyunsoo Chung, \textbf{Jaesik Park}, and Minsu Cho}{Fragment Relation Networks for Geometric Shape Assembly}{Learning Meets Combinatorial Algorithms (LMCA, \textbf{NeurIPS workshop}), 2020}
-    \publicationItem{Zhixuan Yu, Jaeshin Yoon, Inkyu Lee, Prashanth Venkatesh, \textbf{Jaesik Park}, Jihun Yu, and Hyunsoo Park}{HUMBI: A Large Multiview Dataset of Human Body Expressions}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2020}
-    \publicationItem{Christopher Choy, Junha Lee, Rene Ranftl, \textbf{Jaesik Park}, and Vladlen Koltun}{High-Dimensional Convolutional Networks for Geometric Pattern Recognition}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2020}
-    \publicationItem{Yue Wu, Rongrong Gao, \textbf{Jaesik Park}, and Qifeng Chen}{Future Video Synthesis with Object Motion Predictions}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2020}
-    \publicationItem{Christopher Choy*, \textbf{Jaesik Park}*, and Vladlen Koltun}{Fully Convolutional Geometric Features}{International Conference on Computer Vision (\textbf{ICCV}), 2019}
-    \publicationItem{Jungeon Kim, Hyomin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{Global Texture Mapping for Dynamic Objects}{Pacific Graphics (\textbf{PG}), 2019}
-    \publicationItem{Wei Dong, \textbf{Jaesik Park}, Yi Yang, and Michael Kaess}{GPU Accelerated Robust Scene Reconstruction}{IEEE/RSJ International Conference on Intelligent Robots and Systems (\textbf{IROS}), 2019}
-    \publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{Depth from a Light Field Image with Learning-based Matching Costs}{IEEE Transactions on Pattern Analysis and Machine Intelligence (\textbf{TPAMI}), 2019}
-    \publicationItem{Maxim Tatarchenko*, \textbf{Jaesik Park}*, Vladlen Koltun, and Qian-Yi Zhou}{Tangent Convolutions for Dense Prediction in 3D}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2018}
-    \publicationItem{Qian-Yi Zhou, \textbf{Jaesik Park}, and Vladlen Koltun}{Open3D: A Modern Library For 3D Data Processing}{Technical Report, arXiv:1801.09847, 2018}
-    \publicationItem{Byungtae Ahn, Dong-Geol Choi, \textbf{Jaesik Park}, and In So Kweon}{Real-time Head Pose Estimation using Multi-task Deep Neural Network}{Robotics and Autonomous Systems (\textbf{RAS}), 2018}
-    \publicationItem{\textbf{Jaesik Park}, Qian-Yi Zhou, and Vladlen Koltun}{Colored Point Cloud Registration Revisited}{International Conference on Computer Vision (\textbf{ICCV}), 2017}
-    \publicationItem{Arno Knapitsch, \textbf{Jaesik Park}, Qian-Yi Zhou, and Vladlen Koltun}{Tanks and Temples: Benchmarking Large-Scale Scene Reconstruction}{ACM Transactions on Graphics (Proc. \textbf{SIGGRAPH}), 2017}
-    \publicationItem{Seong heum Kim, Yu Wing Tai, Joon Young Lee, \textbf{Jaesik Park}, and In So Kweon}{Category Specific Salient View Selection via Deep Convolutional Neural Networks}{Computer Graphics Forum (\textbf{CGF}), 2017}
-    \publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Robust Multiview Photometric Stereo using Planar Mesh Parameterization}{IEEE Transactions on Pattern Analysis and Machine Intelligence (\textbf{TPAMI}), 2016}
-    \publicationItem{Qian-Yi Zhou, \textbf{Jaesik Park}, and Vladlen Koltun}{Fast Global Registration}{European Conference on Computer Vision (\textbf{ECCV}), 2016}
-    \publicationItem{Gyeongmin Choe, \textbf{Jaesik Park}, Yu-Wing Tai, and In So Kweon}{Refining Geometry from Depth Sensors using IR Shading Images}{International Journal of Computer Vision (\textbf{IJCV}), 2016}
-    \publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon}{Efficient and Robust Color Consistency for Community Photo Collections}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2016}
-    \publicationItem{Hyowon Ha, Sunghoon Im, \textbf{Jaesik Park}, Hae-Gon Jeon, and In So Kweon}{High-quality Depth from Uncalibrated Small Motion Clip}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2016}
-    \publicationItem{Inwook Shim, Seunghak Shin, Yunsu Bok, Kyungdon Joo, Dong-Geol Choi, Joon-Young Lee, \textbf{Jaesik Park}, Jun Ho Oh, and In So Kweon}{Vision System and Depth Processing for DRC-HUBO+}{IEEE International Conference on Robotics and Automation (\textbf{ICRA}), 2016}
-    \publicationItem{Seong-Heum Kim, Yu-Wing Tai, \textbf{Jaesik Park}, and In So Kweon}{Multi-view Object Extraction with Fractional Boundaries}{IEEE Transaction on Image Processing (\textbf{TIP}), 2016}
-    \publicationItem{Hyowon Ha, \textbf{Jaesik Park}, and In So Kweon}{Dense Depth and Albedo from a Single-shot Structured Light}{International Conference on 3D Vision (\textbf{3DV}), 2015}
-    \publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{Accurate Depth Map Estimation from a Lenslet Light Field Camera}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2015}
-    \publicationItem{SoonMin Hwang, \textbf{Jaesik Park}, Namil Kim, Yukyung Choi, and In So Kweon}{Multi-modal Pedestrian Detection: Benchmark Dataset and Baselines}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2015}
-    \publicationItem{\textbf{Jaesik Park}, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown, and In-So Kweon}{High Quality Depth Map Upsampling and Completion for RGB-D Cameras}{IEEE Transaction on Image Processing (\textbf{TIP}), 2014}
-    \publicationItem{Byungtae Ahn, \textbf{Jaesik Park}, and In So Kweon}{Real-time Head Orientation from a Monocular Camera using Deep Neural Network}{Asian Conference on Computer Vision (\textbf{ACCV}), 2014}
-    \publicationItem{Jinsoo Choi, Byungtae Ahn, \textbf{Jaesik Park}, and In So Kweon}{GMM-based Saliency Aggregation for Calibration-free Gaze Estimation}{International Conference on Image Processing (\textbf{ICIP}), 2014}
-    \publicationItem{Gyeongmin Choe*, \textbf{Jaesik Park}*, Yu-Wing Tai, and In So Kweon}{Exploiting Shading Cues in Kinect IR Images for Geometry Refinement}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2014}
-    \publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Calibrating a Non-isotropic Near Point Light Source using a Plane}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2014}
-    \publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Multiview Photometric Stereo using Planar Mesh Parameterization}{International Conference on Computer Vision (\textbf{ICCV}), 2013}
-    \publicationItem{\textbf{Jaesik Park}, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, and In So Kweon}{Tensor Voting Approach for Multi-View 3D Scene-flow Estimation and Refinement}{European Conference on Computer Vision (\textbf{ECCV}), 2012}
-    \publicationItem{\textbf{Jaesik Park}, Joon-Young Lee, Yu-Wing Tai, and In So Kweon}{Modeling Photo Composition and Its Application to Photo Re-arrangement}{International Conference on Image Processing (\textbf{ICIP}), 2012}
-    \publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, and In-So Kweon}{Identigram/Watermark removal using cross-channel correlation}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2012}
-    \publicationItem{Jiyoung Jung, Yekeun Jeong, \textbf{Jaesik Park}, Hyowon Ha, J. D. Kim, and In-So Kweon}{A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System}{IEEE/RSJ International Conference on Intelligent Robots and Systems (\textbf{IROS}), 2011}
-    \publicationItem{\textbf{Jaesik Park}*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown, and In-So Kweon}{High Quality Depth Map Upsampling for 3D-TOF Cameras}{International Conference on Computer Vision (\textbf{ICCV}), 2011}
+    \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{Self-Supervised Real-time Video Stabilization}{The British Machine Vision Conference (\textbf{BMVC}), 2021}{}
+    \publicationItem{Jungeon Kim, Hyomin Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{TextureMe: High-quality Textured Scene Reconstruction in Real-time}{ACM Transactions on Graphics (\textbf{ToG}), 2021}{}
+    \publicationItem{Minguk Kang, Woohyeon Joseph Shim, Minsu Cho, and \textbf{Jaesik Park}}{Rebooting ACGAN: Auxiliary Classifier GANs with Stable Training}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}{}
+    \publicationItem{Hyunsoo Chung, Jungtaek Kim, Boris Knyazev, Jinhwi Lee, Graham W. Taylor, \textbf{Jaesik Park}, and Minsu Cho}{Brick-by-Brick: Combinatorial Construction with Deep Reinforcement Learning}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}{}
+    \publicationItem{Yoonwoo Jeong, Seokjun Ahn, Christopher Choy, Animashree Anandkumar, Minsu Cho, and \textbf{Jaesik Park}}{Self-Calibrating Neural Radiance Fields}{International Conference on Computer Vision (\textbf{ICCV}), 2021}{}
+    \publicationItem{Junha Lee, Seungwook Kim, Minsu Cho, and \textbf{Jaesik Park}}{Deep Hough Voting for Robust Global Registration}{International Conference on Computer Vision (\textbf{ICCV}), 2021}{}
+    \publicationItem{Hyomin Kim, Jungeon Kim, Jaewon Kam, \textbf{Jaesik Park}*, and Seungyong Lee*}{Deep Virtual Markers for Articulated 3D Shapes}{International Conference on Computer Vision (\textbf{ICCV}), 2021}{(*Joint corrresponding authors, \textbf{Oral} Presentation, 3.4\% acceptance rate)}
+    \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{STAD: Stable Video Depth Estimation}{IEEE International Conference on Image Processing (\textbf{ICIP}), 2021}{}
+    \publicationItem{Taewon Jin, Taesoo Park, Ina Park, \textbf{Jaesik Park}*, and Ji Hoon Shim*}{Accelerated Crystal Structure Prediction of Multi-elements Random Alloy using Expandable Features}{\textbf{Scientific Reports} published by Nature Research, 2021}{(*Joint corrresponding authors)}
+    \publicationItem{Hyomin Kim, Jungeon Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{Spatiotemporal Texture Reconstruction for Dynamic Objects Using a Single RGB-D Camera}{42nd Annual Conference of the European Association for Computer Graphics (\textbf{EuroGraphics}), 2021}{}
+    \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{High-quality Frame Interpolation via Tridirectional Inference}{Winter Conference on Applications of Computer Vision (\textbf{WACV}), 2021}{}
+    \publicationItem{Minguk Kang and \textbf{Jaesik Park}}{ContraGAN: Contrastive Learning for Conditional Image Generation}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2020}{}
+    \publicationItem{Jungtaek Kim, Hyunsoo Chung, Minsu Cho, and \textbf{Jaesik Park}}{Combinatorial 3D Shape Generation via Sequential Assembly}{Machine Learning for Engineering Modeling, Simulation, and Design (ML4Eng, \textbf{NeurIPS workshop}), 2020}{}
+    \publicationItem{Jinhwi Lee*, Jungtaek Kim*, Hyunsoo Chung, \textbf{Jaesik Park}, and Minsu Cho}{Fragment Relation Networks for Geometric Shape Assembly}{Learning Meets Combinatorial Algorithms (LMCA, \textbf{NeurIPS workshop}), 2020}{(*Equal contribution)}
+    \publicationItem{Zhixuan Yu, Jaeshin Yoon, Inkyu Lee, Prashanth Venkatesh, \textbf{Jaesik Park}, Jihun Yu, and Hyunsoo Park}{HUMBI: A Large Multiview Dataset of Human Body Expressions}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2020}{}
+    \publicationItem{Christopher Choy, Junha Lee, Rene Ranftl, \textbf{Jaesik Park}, and Vladlen Koltun}{High-Dimensional Convolutional Networks for Geometric Pattern Recognition}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2020}{(\textbf{Oral} Presentation, 5.7\% acceptance rate)}
+    \publicationItem{Yue Wu, Rongrong Gao, \textbf{Jaesik Park}, and Qifeng Chen}{Future Video Synthesis with Object Motion Predictions}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2020}{}
+    \publicationItem{Christopher Choy*, \textbf{Jaesik Park}*, and Vladlen Koltun}{Fully Convolutional Geometric Features}{International Conference on Computer Vision (\textbf{ICCV}), 2019}{(*Equal contribution)}
+    \publicationItem{Jungeon Kim, Hyomin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{Global Texture Mapping for Dynamic Objects}{Pacific Graphics (\textbf{PG}), 2019}{}
+    \publicationItem{Wei Dong, \textbf{Jaesik Park}, Yi Yang, and Michael Kaess}{GPU Accelerated Robust Scene Reconstruction}{IEEE/RSJ International Conference on Intelligent Robots and Systems (\textbf{IROS}), 2019}{}
+    \publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{Depth from a Light Field Image with Learning-based Matching Costs}{IEEE Transactions on Pattern Analysis and Machine Intelligence (\textbf{TPAMI}), 2019}{}
+    \publicationItem{Maxim Tatarchenko*, \textbf{Jaesik Park}*, Vladlen Koltun, and Qian-Yi Zhou}{Tangent Convolutions for Dense Prediction in 3D}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2018}{(*Equal contribution. \textbf{Spotlight Oral} Presentation)}
+    \publicationItem{Qian-Yi Zhou, \textbf{Jaesik Park}, and Vladlen Koltun}{Open3D: A Modern Library For 3D Data Processing}{Technical Report, arXiv:1801.09847, 2018}{}
+    \publicationItem{Byungtae Ahn, Dong-Geol Choi, \textbf{Jaesik Park}, and In So Kweon}{Real-time Head Pose Estimation using Multi-task Deep Neural Network}{Robotics and Autonomous Systems (\textbf{RAS}), 2018}{}
+    \publicationItem{\textbf{Jaesik Park}, Qian-Yi Zhou, and Vladlen Koltun}{Colored Point Cloud Registration Revisited}{International Conference on Computer Vision (\textbf{ICCV}), 2017}{}
+    \publicationItem{Arno Knapitsch, \textbf{Jaesik Park}, Qian-Yi Zhou, and Vladlen Koltun}{Tanks and Temples: Benchmarking Large-Scale Scene Reconstruction}{ACM Transactions on Graphics (Proc. \textbf{SIGGRAPH}), 2017}{}
+    \publicationItem{Seong heum Kim, Yu Wing Tai, Joon Young Lee, \textbf{Jaesik Park}, and In So Kweon}{Category Specific Salient View Selection via Deep Convolutional Neural Networks}{Computer Graphics Forum (\textbf{CGF}), 2017}{}
+    \publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Robust Multiview Photometric Stereo using Planar Mesh Parameterization}{IEEE Transactions on Pattern Analysis and Machine Intelligence (\textbf{TPAMI}), 2016}{}
+    \publicationItem{Qian-Yi Zhou, \textbf{Jaesik Park}, and Vladlen Koltun}{Fast Global Registration}{European Conference on Computer Vision (\textbf{ECCV}), 2016}{(\textbf{Oral} Presentation, 1.8\% acceptance rate)}
+    \publicationItem{Gyeongmin Choe, \textbf{Jaesik Park}, Yu-Wing Tai, and In So Kweon}{Refining Geometry from Depth Sensors using IR Shading Images}{International Journal of Computer Vision (\textbf{IJCV}), 2016}{}
+    \publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon}{Efficient and Robust Color Consistency for Community Photo Collections}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2016}{}
+    \publicationItem{Hyowon Ha, Sunghoon Im, \textbf{Jaesik Park}, Hae-Gon Jeon, and In So Kweon}{High-quality Depth from Uncalibrated Small Motion Clip}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2016}{(\textbf{Oral} Presentation, 3.9\% acceptance rate)}
+    \publicationItem{Inwook Shim, Seunghak Shin, Yunsu Bok, Kyungdon Joo, Dong-Geol Choi, Joon-Young Lee, \textbf{Jaesik Park}, Jun Ho Oh, and In So Kweon}{Vision System and Depth Processing for DRC-HUBO+}{IEEE International Conference on Robotics and Automation (\textbf{ICRA}), 2016}{Depth processing algorithm of Team KAIST (winner of DARPA robotics challenge finals 2015)}
+    \publicationItem{Seong-Heum Kim, Yu-Wing Tai, \textbf{Jaesik Park}, and In So Kweon}{Multi-view Object Extraction with Fractional Boundaries}{IEEE Transaction on Image Processing (\textbf{TIP}), 2016}{Depth processing algorithm of Team KAIST (winner of DARPA robotics challenge finals 2015)}
+    \publicationItem{Hyowon Ha, \textbf{Jaesik Park}, and In So Kweon}{Dense Depth and Albedo from a Single-shot Structured Light}{International Conference on 3D Vision (\textbf{3DV}), 2015}{}
+    \publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{Accurate Depth Map Estimation from a Lenslet Light Field Camera}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2015}{}
+    \publicationItem{SoonMin Hwang, \textbf{Jaesik Park}, Namil Kim, Yukyung Choi, and In So Kweon}{Multi-modal Pedestrian Detection: Benchmark Dataset and Baselines}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2015}{}
+    \publicationItem{\textbf{Jaesik Park}, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown, and In-So Kweon}{High Quality Depth Map Upsampling and Completion for RGB-D Cameras}{IEEE Transaction on Image Processing (\textbf{TIP}), 2014}{}
+    \publicationItem{Byungtae Ahn, \textbf{Jaesik Park}, and In So Kweon}{Real-time Head Orientation from a Monocular Camera using Deep Neural Network}{Asian Conference on Computer Vision (\textbf{ACCV}), 2014}{}
+    \publicationItem{Jinsoo Choi, Byungtae Ahn, \textbf{Jaesik Park}, and In So Kweon}{GMM-based Saliency Aggregation for Calibration-free Gaze Estimation}{International Conference on Image Processing (\textbf{ICIP}), 2014}{}
+    \publicationItem{Gyeongmin Choe*, \textbf{Jaesik Park}*, Yu-Wing Tai, and In So Kweon}{Exploiting Shading Cues in Kinect IR Images for Geometry Refinement}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2014}{*Equal contributions. Received 20th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp.}
+    \publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Calibrating a Non-isotropic Near Point Light Source using a Plane}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2014}{}
+    \publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Multiview Photometric Stereo using Planar Mesh Parameterization}{International Conference on Computer Vision (\textbf{ICCV}), 2013}{Received 19th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp.}
+    \publicationItem{\textbf{Jaesik Park}, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, and In So Kweon}{Tensor Voting Approach for Multi-View 3D Scene-flow Estimation and Refinement}{European Conference on Computer Vision (\textbf{ECCV}), 2012}{}
+    \publicationItem{\textbf{Jaesik Park}, Joon-Young Lee, Yu-Wing Tai, and In So Kweon}{Modeling Photo Composition and Its Application to Photo Re-arrangement}{International Conference on Image Processing (\textbf{ICIP}), 2012}{}
+    \publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, and In-So Kweon}{Identigram/Watermark removal using cross-channel correlation}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2012}{}
+    \publicationItem{Jiyoung Jung, Yekeun Jeong, \textbf{Jaesik Park}, Hyowon Ha, J. D. Kim, and In-So Kweon}{A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System}{IEEE/RSJ International Conference on Intelligent Robots and Systems (\textbf{IROS}), 2011}{}
+    \publicationItem{\textbf{Jaesik Park}*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown, and In-So Kweon}{High Quality Depth Map Upsampling for 3D-TOF Cameras}{International Conference on Computer Vision (\textbf{ICCV}), 2011}{*Equal contributions}
 \resumePublicationListEnd
 
 
@@ -230,45 +235,48 @@ Domestic
 
 \section{Program Committee}
 \resumeItemListStart
-    \resumeItem{Associate Editor, IEEE International Conference on Robotics and Automation (ICRA),  2021}
-    \resumeItem{Associate Editor, IEEE/RSJ International Conference on Inteligent Robotics and Systems (IROS),  2021}
+    \resumeItem{\textbf{Associate Editor}, IEEE International Conference on Robotics and Automation (\textbf{ICRA}),  2021}
+    \resumeItem{\textbf{Associate Editor}, IEEE/RSJ International Conference on Inteligent Robotics and Systems (\textbf{IROS}),  2021}
     \resumeItem{Area Chair, Machine Vision Applications (MVA) conference,  2021}
-    \resumeItem{Area Chair, International Conference on Computer Vision and Pattern Recognition (CVPR),  2021}
-    \resumeItem{Area Chair, International Conference on Computer Vision (ICCV),  2021}
-    \resumeItem{Senior Program Committee, Int. Joint Conf. on Artificial Intelligence (IJCAI),  2021}
-    \resumeItem{Senior Program Committee, American Assoc. for Artificial Intelligence (AAAI),  2021}
-    \resumeItem{Area Chair, International Conference on Computer Vision and Pattern Recognition (CVPR),  2020}
-    \resumeItem{Area Chair, International Conference on Computer Vision (ICCV),  2019}
-    \resumeItem{Session Chair, International Conference on Computer Vision (ICCV),  2019}
+    \resumeItem{\textbf{Area Chair}, International Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}),  2021}
+    \resumeItem{\textbf{Area Chair}, International Conference on Computer Vision (\textbf{ICCV}),  2021}
+    \resumeItem{Senior Program Committee, Int. Joint Conf. on Artificial Intelligence (\textbf{IJCAI}),  2021}
+    \resumeItem{Senior Program Committee, American Assoc. for Artificial Intelligence (\textbf{AAAI}),  2021}
+    \resumeItem{\textbf{Area Chair}, International Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}),  2020}
+    \resumeItem{\textbf{Area Chair}, International Conference on Computer Vision (\textbf{ICCV}),  2019}
+    \resumeItem{\textbf{Session Chair}, International Conference on Computer Vision (\textbf{ICCV}),  2019}
+\resumeItem{Have been served as a reviewer for international conferences, such as \textbf{CVPR}, \textbf{ICCV}, \textbf{ECCV}, \textbf{ICLR}, \textbf{NeurIPS}, \textbf{AAAI}, \textbf{ICRA}, \textbf{IROS}, \textbf{SIGGRAPH}, \textbf{SIGGRAPH Asia}, BMVC, 3DV, ACCV, WACV, and so on.}
+\resumeItem{Have been served as a reviewer for international journals, such as \textbf{TPAMI}, \textbf{TIP}, \textbf{TVCG}, \textbf{TRO}, \textbf{IJCV}, CVIU, SPL, IVC, Neurocomputing, and so on.}
 \resumeItemListEnd
 
 
 
 \section{Awards}
 \resumeItemListStart
-    \resumeItem{Best EduTech Award, POSTECH, Oct. 2021}
-    \resumeItem{Representative research achievements, POSTECH, July 2021}
-    \resumeItem{Qualcomm Gift Grant, Qualcomm Corporation, Dec. 2020}
-    \resumeItem{Faculty Support Program, Intel Corporation, June 2020}
-    \resumeItem{Outstanding Online Class Award, Awarded to five classes among 170 classes, POSTECH, July 2020}
-    \resumeItem{Google Season of Docs, Google Corporation, Technical writer support for Open3D, Apr. 2019}
-    \resumeItem{Qualcomm Gift Grant, Qualcomm Corporation, Sep. 2019}
+    \resumeItem{\textbf{Best EduTech Class Award}, POSTECH, Oct. 2021}
+    \resumeItem{\textbf{Representative Research Achievements}, POSTECH, July 2021}
+    \resumeItem{\textbf{Qualcomm Gift Grant}, Qualcomm Corporation, Dec. 2020}
+    \resumeItem{\textbf{Outstanding Online Class}, Awarded to five classes among 170 classes, POSTECH, July 2020}
+    \resumeItem{\textbf{Faculty Support Program}, Intel Corporation, June 2020}
+    \resumeItem{\textbf{Google Season of Docs}, Google Corporation, \emph{Technical writer support for Open3D}, Apr. 2019}
+    \resumeItem{\textbf{Qualcomm Gift Grant}, Qualcomm Corporation, Sep. 2019}
     \resumeItem{Research Velocity Challenge Award, Intel Corporation, Dec. 2018}
-    \resumeItem{Depth estimation challenge: robustness champion, CVPR workshop on Light Fields for Computer Vision, July 2017}
-    \resumeItem{Qualcomm Innovation Award, Qualcomm Korea Corp. and KAIST, March 2016}
+    \resumeItem{Depth Estimation Challenge: Robustness Champion, CVPR workshop on Light Fields for Comp. Vis., July 2017}
+    \resumeItem{\textbf{Qualcomm Innovation Award}, Qualcomm Korea Corp., March 2016}
     \resumeItem{CVPR 2015 Doctoral Consortium, IEEE CVPR, Apr. 2016}
-    \resumeItem{Honor Prize, KAIST, Annual Ph.D. Research Progress Evaluation, May 2016}
-    \resumeItem{Best Paper Award, Korea Multimedia Society, 2015 Spring Annual Conference, May 2016}
-    \resumeItem{Honor Prize, KAIST, Annual Ph.D. Research Progress Evaluation, May 2015}
-    \resumeItem{19th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp., Feb. 2013}
+    \resumeItem{\textbf{Honor Prize}, KAIST, \emph{Annual Ph.D. Research Progress Evaluation}, May 2016}
+    \resumeItem{Best Paper Award, Korea Multimedia Society, \emph{2015 Spring Annual Conference}, May 2016}
+    \resumeItem{\textbf{Honor Prize}, KAIST, \emph{Annual Ph.D. Research Progress Evaluation}, May 2015}
+    \resumeItem{\textbf{20th HumanTech Paper Award (Silver Prize)}, Samsung Electronics Corp., Feb. 2014}
+    \resumeItem{\textbf{19th HumanTech Paper Award (Silver Prize)}, Samsung Electronics Corp., Feb. 2013}
     \resumeItem{Best Paper Award, 25th Workshop on Image Processing and Image Understanding (IPIU2013), Feb. 2013}
     \resumeItem{Bronze Prize, Samsung Techwin research center conference, Feb. 2012}
     \resumeItem{Excellent Intern Award, Microsoft Research Asia, Dec. 2012}
-    \resumeItem{Microsoft Research Asia Fellowship, Microsoft, Awarded to 11 Ph.D. students in the top Asian universities., Nov. 2011}
-    \resumeItem{Summa cum laude, Hanyang University, Feb. 2009}
-    \resumeItem{Full Scholarship, Jeongsu scholarship foundation, Aug. 2006}
-    \resumeItem{Scholarship for Selected Undergraduate Students, The Korea Foundation for Advanced Studies (KFAS), June 2006}
-    \resumeItem{Full scholarship, Hanyang University, Aug. 2005}
+    \resumeItem{\textbf{Microsoft Research Asia Fellowship}, Microsoft, \emph{Awarded to 11 Ph.D. students in the top Asian universities.}, Nov. 2011}
+    \resumeItem{\textbf{Summa Cum Laude}, Hanyang University, \emph{GPA 4.32/4.5}, Feb. 2009}
+    \resumeItem{\textbf{Full Scholarship}, Jeong-Su Scholarship Foundation, Aug. 2006}
+    \resumeItem{\textbf{Scholarship for Undergraduate Students}, The Korea Foundation for Advanced Studies (KFAS), June 2006}
+    \resumeItem{\textbf{Full scholarship}, Hanyang University, Aug. 2005}
 \resumeItemListEnd
 
 
@@ -293,14 +301,14 @@ Domestic
     \resumeItem{AIGS101 Artifical Intelligence Basis II, Fall,  2021}
     \resumeItem{CSED703F Topics in AI: 3D Vision, Fall,  2021}
     \resumeItem{AIGS101 Artifical Intelligence Basis I, Spring,  2021}
-    \resumeItem{CSED538/AIGS538 Deep learning, Spring,  2021}
+    \resumeItem{CSED538/AIGS538 Deep learning, \emph{\textbf{Awarded as the Best EduTech Class} by POSTECH}, Spring,  2021}
     \resumeItem{AIGS101, Artifical Intelligence Basis II, Fall,  2020}
     \resumeItem{CSED100, Introduction to Computer Science Engineering, Fall,  2020}
     \resumeItem{CSED703F, 3D Vision, Fall,  2020}
     \resumeItem{CSED800/AIGS800, CSE/GSAI Colloquium, Fall,  2020}
     \resumeItem{AIGS101, Artifical Intelligence Basis I, Spring,  2020}
     \resumeItem{AIGS537/CSED537, Artificial Intelligence and Data Science, 2020 Spring, Spring,  2020}
-    \resumeItem{CSED233, Data Structure, Spring, (Awarded as the outstanding online class),  2020}
+    \resumeItem{CSED233, Data Structure, \emph{\textbf{Awarded as the Outstanding Online Class} by POSTECH}, Spring,  2020}
     \resumeItem{CSED703F-01 3D Vision, Fall,  2019}
 \resumeItemListEnd
 
