--- a/source/latex/awards.tex
+++ b/source/latex/awards.tex
@@ -1,28 +1,29 @@
 \section{Awards}
 \resumeItemListStart
-    \resumeItem{Best EduTech Award, POSTECH, Oct. 2021}
-    \resumeItem{Representative research achievements, POSTECH, July 2021}
-    \resumeItem{Qualcomm Gift Grant, Qualcomm Corporation, Dec. 2020}
-    \resumeItem{Faculty Support Program, Intel Corporation, June 2020}
-    \resumeItem{Outstanding Online Class Award, Awarded to five classes among 170 classes, POSTECH, July 2020}
-    \resumeItem{Google Season of Docs, Google Corporation, Technical writer support for Open3D, Apr. 2019}
-    \resumeItem{Qualcomm Gift Grant, Qualcomm Corporation, Sep. 2019}
+    \resumeItem{\textbf{Best EduTech Class Award}, POSTECH, Oct. 2021}
+    \resumeItem{\textbf{Representative Research Achievements}, POSTECH, July 2021}
+    \resumeItem{\textbf{Qualcomm Gift Grant}, Qualcomm Corporation, Dec. 2020}
+    \resumeItem{\textbf{Outstanding Online Class}, Awarded to five classes among 170 classes, POSTECH, July 2020}
+    \resumeItem{\textbf{Faculty Support Program}, Intel Corporation, June 2020}
+    \resumeItem{\textbf{Google Season of Docs}, Google Corporation, \emph{Technical writer support for Open3D}, Apr. 2019}
+    \resumeItem{\textbf{Qualcomm Gift Grant}, Qualcomm Corporation, Sep. 2019}
     \resumeItem{Research Velocity Challenge Award, Intel Corporation, Dec. 2018}
-    \resumeItem{Depth estimation challenge: robustness champion, CVPR workshop on Light Fields for Computer Vision, July 2017}
-    \resumeItem{Qualcomm Innovation Award, Qualcomm Korea Corp. and KAIST, March 2016}
+    \resumeItem{Depth Estimation Challenge: Robustness Champion, CVPR workshop on Light Fields for Comp. Vis., July 2017}
+    \resumeItem{\textbf{Qualcomm Innovation Award}, Qualcomm Korea Corp., March 2016}
     \resumeItem{CVPR 2015 Doctoral Consortium, IEEE CVPR, Apr. 2016}
-    \resumeItem{Honor Prize, KAIST, Annual Ph.D. Research Progress Evaluation, May 2016}
-    \resumeItem{Best Paper Award, Korea Multimedia Society, 2015 Spring Annual Conference, May 2016}
-    \resumeItem{Honor Prize, KAIST, Annual Ph.D. Research Progress Evaluation, May 2015}
-    \resumeItem{19th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp., Feb. 2013}
+    \resumeItem{\textbf{Honor Prize}, KAIST, \emph{Annual Ph.D. Research Progress Evaluation}, May 2016}
+    \resumeItem{Best Paper Award, Korea Multimedia Society, \emph{2015 Spring Annual Conference}, May 2016}
+    \resumeItem{\textbf{Honor Prize}, KAIST, \emph{Annual Ph.D. Research Progress Evaluation}, May 2015}
+    \resumeItem{\textbf{20th HumanTech Paper Award (Silver Prize)}, Samsung Electronics Corp., Feb. 2014}
+    \resumeItem{\textbf{19th HumanTech Paper Award (Silver Prize)}, Samsung Electronics Corp., Feb. 2013}
     \resumeItem{Best Paper Award, 25th Workshop on Image Processing and Image Understanding (IPIU2013), Feb. 2013}
     \resumeItem{Bronze Prize, Samsung Techwin research center conference, Feb. 2012}
     \resumeItem{Excellent Intern Award, Microsoft Research Asia, Dec. 2012}
-    \resumeItem{Microsoft Research Asia Fellowship, Microsoft, Awarded to 11 Ph.D. students in the top Asian universities., Nov. 2011}
-    \resumeItem{Summa cum laude, Hanyang University, Feb. 2009}
-    \resumeItem{Full Scholarship, Jeongsu scholarship foundation, Aug. 2006}
-    \resumeItem{Scholarship for Selected Undergraduate Students, The Korea Foundation for Advanced Studies (KFAS), June 2006}
-    \resumeItem{Full scholarship, Hanyang University, Aug. 2005}
+    \resumeItem{\textbf{Microsoft Research Asia Fellowship}, Microsoft, \emph{Awarded to 11 Ph.D. students in the top Asian universities.}, Nov. 2011}
+    \resumeItem{\textbf{Summa Cum Laude}, Hanyang University, \emph{GPA 4.32/4.5}, Feb. 2009}
+    \resumeItem{\textbf{Full Scholarship}, Jeong-Su Scholarship Foundation, Aug. 2006}
+    \resumeItem{\textbf{Scholarship for Undergraduate Students}, The Korea Foundation for Advanced Studies (KFAS), June 2006}
+    \resumeItem{\textbf{Full scholarship}, Hanyang University, Aug. 2005}
 \resumeItemListEnd
 
 
