--- a/source/latex/program_committe.tex
+++ b/source/latex/program_committe.tex
@@ -1,15 +1,17 @@
 \section{Program Committee}
 \resumeItemListStart
-    \resumeItem{Associate Editor, IEEE International Conference on Robotics and Automation (ICRA),  2021}
-    \resumeItem{Associate Editor, IEEE/RSJ International Conference on Inteligent Robotics and Systems (IROS),  2021}
+    \resumeItem{\textbf{Associate Editor}, IEEE International Conference on Robotics and Automation (\textbf{ICRA}),  2021}
+    \resumeItem{\textbf{Associate Editor}, IEEE/RSJ International Conference on Inteligent Robotics and Systems (\textbf{IROS}),  2021}
     \resumeItem{Area Chair, Machine Vision Applications (MVA) conference,  2021}
-    \resumeItem{Area Chair, International Conference on Computer Vision and Pattern Recognition (CVPR),  2021}
-    \resumeItem{Area Chair, International Conference on Computer Vision (ICCV),  2021}
-    \resumeItem{Senior Program Committee, Int. Joint Conf. on Artificial Intelligence (IJCAI),  2021}
-    \resumeItem{Senior Program Committee, American Assoc. for Artificial Intelligence (AAAI),  2021}
-    \resumeItem{Area Chair, International Conference on Computer Vision and Pattern Recognition (CVPR),  2020}
-    \resumeItem{Area Chair, International Conference on Computer Vision (ICCV),  2019}
-    \resumeItem{Session Chair, International Conference on Computer Vision (ICCV),  2019}
+    \resumeItem{\textbf{Area Chair}, International Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}),  2021}
+    \resumeItem{\textbf{Area Chair}, International Conference on Computer Vision (\textbf{ICCV}),  2021}
+    \resumeItem{Senior Program Committee, Int. Joint Conf. on Artificial Intelligence (\textbf{IJCAI}),  2021}
+    \resumeItem{Senior Program Committee, American Assoc. for Artificial Intelligence (\textbf{AAAI}),  2021}
+    \resumeItem{\textbf{Area Chair}, International Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}),  2020}
+    \resumeItem{\textbf{Area Chair}, International Conference on Computer Vision (\textbf{ICCV}),  2019}
+    \resumeItem{\textbf{Session Chair}, International Conference on Computer Vision (\textbf{ICCV}),  2019}
+\resumeItem{Have been served as a reviewer for international conferences, such as \textbf{CVPR}, \textbf{ICCV}, \textbf{ECCV}, \textbf{ICLR}, \textbf{NeurIPS}, \textbf{AAAI}, \textbf{ICRA}, \textbf{IROS}, \textbf{SIGGRAPH}, \textbf{SIGGRAPH Asia}, BMVC, 3DV, ACCV, WACV, and so on.}
+\resumeItem{Have been served as a reviewer for international journals, such as \textbf{TPAMI}, \textbf{TIP}, \textbf{TVCG}, \textbf{TRO}, \textbf{IJCV}, CVIU, SPL, IVC, Neurocomputing, and so on.}
 \resumeItemListEnd
 
 
