--- a/cv.tex
+++ b/cv.tex
@@ -131,6 +131,7 @@
           \resumeItem{Received \textbf{Outstanding Online Class award} (2020) and \textbf{the Best EduTech award} (2021)}
           \resumeItem{3D scene reconstruction, understanding, and assembly projects}
           \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} projects receives 1.9k GitHub stars}
+          \resumeItem{3.8k Google Scholar citations (as of Oct. 2021)}
         \resumeItemListEnd
     \resumeSubheading
       {Staff Research Scientist}{Santa Clara, CA, USA}
@@ -195,40 +196,40 @@ International~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~(* declea
     \publicationItem{Gyeongmin Choe, \textbf{Jaesik Park}, Yu-Wing Tai, and In So Kweon}{Refining Geometry from Depth Sensors using IR Shading Images}{International Journal of Computer Vision (\textbf{IJCV}), 2016}{}
     \publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon}{Efficient and Robust Color Consistency for Community Photo Collections}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2016}{}
     \publicationItem{Hyowon Ha, Sunghoon Im, \textbf{Jaesik Park}, Hae-Gon Jeon, and In So Kweon}{High-quality Depth from Uncalibrated Small Motion Clip}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2016}{(\textbf{Oral} Presentation, 3.9\% acceptance rate)}
-    \publicationItem{Inwook Shim, Seunghak Shin, Yunsu Bok, Kyungdon Joo, Dong-Geol Choi, Joon-Young Lee, \textbf{Jaesik Park}, Jun Ho Oh, and In So Kweon}{Vision System and Depth Processing for DRC-HUBO+}{IEEE International Conference on Robotics and Automation (\textbf{ICRA}), 2016}{Depth processing algorithm of Team KAIST (winner of DARPA robotics challenge finals 2015)}
-    \publicationItem{Seong-Heum Kim, Yu-Wing Tai, \textbf{Jaesik Park}, and In So Kweon}{Multi-view Object Extraction with Fractional Boundaries}{IEEE Transaction on Image Processing (\textbf{TIP}), 2016}{Depth processing algorithm of Team KAIST (winner of DARPA robotics challenge finals 2015)}
+    \publicationItem{Inwook Shim, Seunghak Shin, Yunsu Bok, Kyungdon Joo, Dong-Geol Choi, Joon-Young Lee, \textbf{Jaesik Park}, Jun Ho Oh, and In So Kweon}{Vision System and Depth Processing for DRC-HUBO+}{IEEE International Conference on Robotics and Automation (\textbf{ICRA}), 2016}{(Depth processing algorithm of Team KAIST (winner of DARPA robotics challenge finals 2015))}
+    \publicationItem{Seong-Heum Kim, Yu-Wing Tai, \textbf{Jaesik Park}, and In So Kweon}{Multi-view Object Extraction with Fractional Boundaries}{IEEE Transaction on Image Processing (\textbf{TIP}), 2016}{}
     \publicationItem{Hyowon Ha, \textbf{Jaesik Park}, and In So Kweon}{Dense Depth and Albedo from a Single-shot Structured Light}{International Conference on 3D Vision (\textbf{3DV}), 2015}{}
     \publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{Accurate Depth Map Estimation from a Lenslet Light Field Camera}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2015}{}
     \publicationItem{SoonMin Hwang, \textbf{Jaesik Park}, Namil Kim, Yukyung Choi, and In So Kweon}{Multi-modal Pedestrian Detection: Benchmark Dataset and Baselines}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2015}{}
     \publicationItem{\textbf{Jaesik Park}, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown, and In-So Kweon}{High Quality Depth Map Upsampling and Completion for RGB-D Cameras}{IEEE Transaction on Image Processing (\textbf{TIP}), 2014}{}
     \publicationItem{Byungtae Ahn, \textbf{Jaesik Park}, and In So Kweon}{Real-time Head Orientation from a Monocular Camera using Deep Neural Network}{Asian Conference on Computer Vision (\textbf{ACCV}), 2014}{}
     \publicationItem{Jinsoo Choi, Byungtae Ahn, \textbf{Jaesik Park}, and In So Kweon}{GMM-based Saliency Aggregation for Calibration-free Gaze Estimation}{International Conference on Image Processing (\textbf{ICIP}), 2014}{}
-    \publicationItem{Gyeongmin Choe*, \textbf{Jaesik Park}*, Yu-Wing Tai, and In So Kweon}{Exploiting Shading Cues in Kinect IR Images for Geometry Refinement}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2014}{*Equal contributions. Received 20th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp.}
+    \publicationItem{Gyeongmin Choe*, \textbf{Jaesik Park}*, Yu-Wing Tai, and In So Kweon}{Exploiting Shading Cues in Kinect IR Images for Geometry Refinement}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2014}{(*Equal contributions. Received 20th \textbf{HumanTech Paper Award (Silver Prize)}, Samsung Electronics Corp.)}
     \publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Calibrating a Non-isotropic Near Point Light Source using a Plane}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2014}{}
-    \publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Multiview Photometric Stereo using Planar Mesh Parameterization}{International Conference on Computer Vision (\textbf{ICCV}), 2013}{Received 19th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp.}
+    \publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Multiview Photometric Stereo using Planar Mesh Parameterization}{International Conference on Computer Vision (\textbf{ICCV}), 2013}{(Received 19th \textbf{HumanTech Paper Award (Silver Prize)}, Samsung Electronics Corp.)}
     \publicationItem{\textbf{Jaesik Park}, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, and In So Kweon}{Tensor Voting Approach for Multi-View 3D Scene-flow Estimation and Refinement}{European Conference on Computer Vision (\textbf{ECCV}), 2012}{}
     \publicationItem{\textbf{Jaesik Park}, Joon-Young Lee, Yu-Wing Tai, and In So Kweon}{Modeling Photo Composition and Its Application to Photo Re-arrangement}{International Conference on Image Processing (\textbf{ICIP}), 2012}{}
     \publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, and In-So Kweon}{Identigram/Watermark removal using cross-channel correlation}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2012}{}
     \publicationItem{Jiyoung Jung, Yekeun Jeong, \textbf{Jaesik Park}, Hyowon Ha, J. D. Kim, and In-So Kweon}{A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System}{IEEE/RSJ International Conference on Intelligent Robots and Systems (\textbf{IROS}), 2011}{}
-    \publicationItem{\textbf{Jaesik Park}*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown, and In-So Kweon}{High Quality Depth Map Upsampling for 3D-TOF Cameras}{International Conference on Computer Vision (\textbf{ICCV}), 2011}{*Equal contributions}
+    \publicationItem{\textbf{Jaesik Park}*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown, and In-So Kweon}{High Quality Depth Map Upsampling for 3D-TOF Cameras}{International Conference on Computer Vision (\textbf{ICCV}), 2011}{(*Equal contributions)}
 \resumePublicationListEnd
 
 
 
 Domestic
 \resumePublicationListStart
-    \publicationItem{Junha Lee, Seungwook Kim, Minsu Cho, and \textbf{Jaesik Park}}{계층적 허프 변환을 통한 포인트 클라우드 정합}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
-    \publicationItem{Hyunsoo Chung, Jungtaek Kim, Jinhwi Lee, \textbf{Jaesik Park}, and Minsu Cho}{강화학습을 이용한 그래프 표현 기반의 3차원 물체 생성}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
-    \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{일관된 비디오 뎁스 맵 추정을 위한 시간 어텐션 모듈}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
-    \publicationItem{Jungeon Kim, Hyomin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{동적 객체에 대한 전역 텍스쳐 맵 생성}{제 32회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2020}
-    \publicationItem{Jungeon Kim, Hyomin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{메시 피라미드를 활용한 3차원 비강체 모델 텍스쳐 맵 생성}{한국컴퓨터그래픽스학회, Jul 2019}
-    \publicationItem{Min-Hyun Kim, \textbf{Jaesik Park}, and In So Kweon}{깊이 영상 처리를 위한 학습기반 신뢰도 추정 및 재질 분류}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
-    \publicationItem{Junsik Kim, Kyungdon Joo, Tae-Hyun Oh, \textbf{Jaesik Park}, and In So Kweon}{시야 공유가 없는 다중 카메라를 이용한 사람 추적}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
-    \publicationItem{SoonMin Hwang, \textbf{Jaesik Park}, Namil Kim, Yukyung Choi, and In So Kweon}{컬러-열영상 퓨전을 통한 강인한 보행자 검출 기법}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
-    \publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{마이크로 렌즈 기반의 휴대용 라이트필드 카메라를 이용한 정확한 깊이 정보 추정방법}{한국멀티미디어학회 춘계학술발표대회, May 2015}
-    \publicationItem{Gyeongmin Choe, \textbf{Jaesik Park}, Hyowon Ha, and In So Kweon}{키넥트 깊이 정밀도 개선을 위한 적외선 패턴 영상의 스테레오 정합}{2013년도 한국 멀티미디어 학회 춘계학술 발표대회 논문집 제 16권 1호, May, 2013}
-    \publicationItem{\textbf{Jaesik Park}, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, and In So Kweon}{다시점 영상기반 3차원 움직임 추정기법}{제 25회 영상처리 및 이해에 관한 워크샵 (IPIU)}
-    \publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, and In So Kweon}{컬러 영상의 홀로그램 및 워터마크 제거 기법}{제 25회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+    \publicationItem{Junha Lee, Seungwook Kim, Minsu Cho, and \textbf{Jaesik Park}}{계층적 허프 변환을 통한 포인트 클라우드 정합}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}{(\textbf{Received The Gold Prize})}
+    \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{일관된 비디오 뎁스 맵 추정을 위한 시간 어텐션 모듈}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}{(\textbf{Received The Silver Prize})}
+    \publicationItem{Hyunsoo Chung, Jungtaek Kim, Jinhwi Lee, \textbf{Jaesik Park}, and Minsu Cho}{강화학습을 이용한 그래프 표현 기반의 3차원 물체 생성}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}{}
+    \publicationItem{Jungeon Kim, Hyomin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{동적 객체에 대한 전역 텍스쳐 맵 생성}{제 32회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2020}{}
+    \publicationItem{Jungeon Kim, Hyomin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{메시 피라미드를 활용한 3차원 비강체 모델 텍스쳐 맵 생성}{한국컴퓨터그래픽스학회, Jul 2019}{}
+    \publicationItem{Min-Hyun Kim, \textbf{Jaesik Park}, and In So Kweon}{깊이 영상 처리를 위한 학습기반 신뢰도 추정 및 재질 분류}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}{}
+    \publicationItem{Junsik Kim, Kyungdon Joo, Tae-Hyun Oh, \textbf{Jaesik Park}, and In So Kweon}{시야 공유가 없는 다중 카메라를 이용한 사람 추적}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}{}
+    \publicationItem{SoonMin Hwang, \textbf{Jaesik Park}, Namil Kim, Yukyung Choi, and In So Kweon}{컬러-열영상 퓨전을 통한 강인한 보행자 검출 기법}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}{}
+    \publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{마이크로 렌즈 기반의 휴대용 라이트필드 카메라를 이용한 정확한 깊이 정보 추정방법}{한국멀티미디어학회 춘계학술발표대회, May 2015}{(\textbf{Received the Best Paper Award})}
+    \publicationItem{Gyeongmin Choe, \textbf{Jaesik Park}, Hyowon Ha, and In So Kweon}{키넥트 깊이 정밀도 개선을 위한 적외선 패턴 영상의 스테레오 정합}{2013년도 한국 멀티미디어 학회 춘계학술 발표대회 논문집 제 16권 1호, May, 2013}{}
+    \publicationItem{\textbf{Jaesik Park}, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, and In So Kweon}{다시점 영상기반 3차원 움직임 추정기법}{제 25회 영상처리 및 이해에 관한 워크샵 (IPIU)}{}
+    \publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, and In So Kweon}{컬러 영상의 홀로그램 및 워터마크 제거 기법}{제 25회 영상처리 및 이해에 관한 워크샵 (IPIU)}{(\textbf{Received the Best Paper Award})}
 \resumePublicationListEnd
 
 
@@ -283,15 +284,15 @@ Domestic
 
 \section{Patents}
 \resumeItemListStart
-    \resumeItem{대조 학습과 적대적 생성 신경망을 활용한 이미지 생성 및 편집 방법과 장치, Republic of Korea, }
-    \resumeItem{Tangent Convolutions for 3D Data, US10572770B2, (Application granted), }
-    \resumeItem{깊이 정보 획득 장치 및 깊이 정보 획득 방법 (Depth Map Acquisition Device And Depth Map Acquisition Method), Patent No. 1018520850000, Republic of Korea, (Application granted), }
-    \resumeItem{삼차원 영상 정보 획득 방법 및 이를 구현한 컴퓨팅 장치 (Method For Acquiring Three Dimensional Image Information, And Computing Device Implementing The Same Method), Patent No. 1017652570000, Republic of Korea (Application granted), }
-    \resumeItem{전경 추출 방법 및 장치 (Foreground Area Extracting Method and Apparatus), Patent No. 10-2015-0084331, Republic of Korea., }
-    \resumeItem{다중 객체 추적 방법 및 이를 위한 장치 (Method Of Tracking Multiple Objects And Apparatus For The Same), Patent No. 10-2015-0070569, Republic of Korea, }
-    \resumeItem{깊이 센서와 적외선 음영 영상을 이용한 고품질 3차원 정보 획득 장치 및 방법 (Device and method for obtaining accurate 3D information using depth sensor and infrared shading cues), Patent No. 1017079390000, Republic of Korea. (Application granted), }
-    \resumeItem{가려짐이 있는 환경에서 이동표적의 위치를 추정하는 방법 (Method for Estimating Location of Moving Target in Occluded Tracking Environment), Patent No. 1012883880000, Republic of Korea. (Application granted), }
-    \resumeItem{컬러 이미지의 채널간 상관관계를 이용하는 워터마크 제거 방법 (Method for removing watermark using cross-channel correlation of color image), Patent No. 1013952840000, Republic of Korea. (Application granted), }
+    \resumeItem{대조 학습과 적대적 생성 신경망을 활용한 이미지 생성 및 편집 방법과 장치, Republic of Korea}
+    \resumeItem{Tangent Convolutions for 3D Data, US10572770B2, (Application granted)}
+    \resumeItem{깊이 정보 획득 장치 및 깊이 정보 획득 방법 (Depth Map Acquisition Device And Depth Map Acquisition Method), Patent No. 1018520850000, Republic of Korea, (Application granted)}
+    \resumeItem{삼차원 영상 정보 획득 방법 및 이를 구현한 컴퓨팅 장치 (Method For Acquiring Three Dimensional Image Information, And Computing Device Implementing The Same Method), Patent No. 1017652570000, Republic of Korea (Application granted)}
+    \resumeItem{전경 추출 방법 및 장치 (Foreground Area Extracting Method and Apparatus), Patent No. 10-2015-0084331, Republic of Korea.}
+    \resumeItem{다중 객체 추적 방법 및 이를 위한 장치 (Method Of Tracking Multiple Objects And Apparatus For The Same), Patent No. 10-2015-0070569, Republic of Korea}
+    \resumeItem{깊이 센서와 적외선 음영 영상을 이용한 고품질 3차원 정보 획득 장치 및 방법 (Device and method for obtaining accurate 3D information using depth sensor and infrared shading cues), Patent No. 1017079390000, Republic of Korea. (Application granted)}
+    \resumeItem{가려짐이 있는 환경에서 이동표적의 위치를 추정하는 방법 (Method for Estimating Location of Moving Target in Occluded Tracking Environment), Patent No. 1012883880000, Republic of Korea. (Application granted)}
+    \resumeItem{컬러 이미지의 채널간 상관관계를 이용하는 워터마크 제거 방법 (Method for removing watermark using cross-channel correlation of color image), Patent No. 1013952840000, Republic of Korea. (Application granted)}
 \resumeItemListEnd
 
 
@@ -316,6 +317,7 @@ Domestic
 
 \section{Talks}
 \resumeItemListStart
+    \resumeItem{Object Detection from Images or Point Clouds, LG Electronics, Seoul, Republic of Korea, Aug. 2021}
     \resumeItem{Self-Calibrating Neural Radiance Fields, Korea Institute of Science and Technology (KIST), Virtual, June 2021}
     \resumeItem{Mentor session: how to become a professor, Conference on Computer Vision and Pattern Recognition (CVPR 2021), Virtual, June 2021}
     \resumeItem{Recent work on Image Generation, Gwangju Institute of Science and Technology (GIST), Virtual, May 2021}
