--- a/source/latex/talks.tex
+++ b/source/latex/talks.tex
@@ -1,5 +1,6 @@
 \section{Talks}
 \resumeItemListStart
+    \resumeItem{Object Detection from Images or Point Clouds, LG Electronics, Seoul, Republic of Korea, Aug. 2021}
     \resumeItem{Self-Calibrating Neural Radiance Fields, Korea Institute of Science and Technology (KIST), Virtual, June 2021}
     \resumeItem{Mentor session: how to become a professor, Conference on Computer Vision and Pattern Recognition (CVPR 2021), Virtual, June 2021}
     \resumeItem{Recent work on Image Generation, Gwangju Institute of Science and Technology (GIST), Virtual, May 2021}
