--- a/source/latex/header.tex
+++ b/source/latex/header.tex
@@ -131,6 +131,7 @@
           \resumeItem{Received \textbf{Outstanding Online Class award} (2020) and \textbf{the Best EduTech award} (2021)}
           \resumeItem{3D scene reconstruction, understanding, and assembly projects}
           \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} projects receives 1.9k GitHub stars}
+          \resumeItem{3.8k Google Scholar citations (as of Oct. 2021)}
         \resumeItemListEnd
     \resumeSubheading
       {Staff Research Scientist}{Santa Clara, CA, USA}
