--- a/cv.tex
+++ b/cv.tex
@@ -143,6 +143,15 @@
           \resumeItem{Geometry understanding: tangent convolutions and geometric features}
           \resumeItem{Advised intern students from Stanford University, U.C. Berkeley, and Carnegie Melon University}
         \resumeItemListEnd
+    \resumeSubheading
+      {Post-Doc. Researcher}{Daejeon, Republic of Korea}
+      {KAIST. Developed color correction algorithms (Mentor: Prof. In So Kweon)}{Aug. 2015 -- Nov. 2015}
+    \resumeSubheading
+      {Research Intern}{Redmond, WA, USA}
+      {Microsoft Research. Developed a light calibration technique (Mentor: Dr. Sudipta N. Sinha)}{June 2013 -- Sep. 2013}
+    \resumeSubheading
+      {Research Intern}{Beijing, China}
+      {Microsoft Research Asia. Multiview photometric stereo system (Mentor: Prof. Y. Matsushita)}{April 2012 -- Oct. 2012}     
   \resumeSubHeadingListEnd
 
 \section{Education}
