EduTech class award

--- a/source/latex/awards.tex
+++ b/source/latex/awards.tex
@@ -1,6 +1,6 @@
 \section{Awards}
 \resumeItemListStart
-    \resumeItem{\textbf{Best EduTech Class Award}, POSTECH, Oct. 2021}
+    \resumeItem{\textbf{Best EduTech Class Award}, POSTECH, \emph{Awarded to the one online class among 480 classes}, Oct. 2021}
     \resumeItem{\textbf{Representative Research Achievements}, POSTECH, July 2021}
     \resumeItem{\textbf{Qualcomm Gift Grant}, Qualcomm Corporation, Dec. 2020}
     \resumeItem{\textbf{Outstanding Online Class}, Awarded to five classes among 170 classes, POSTECH, July 2020}
