--- a/source/latex/header.tex
+++ b/source/latex/header.tex
@@ -130,17 +130,17 @@
           \resumeItem{Selected as one of the \textbf{POSTECH's Representative Research Achievements} (2021)}
           \resumeItem{Received \textbf{Outstanding Online Class award} (2020) and \textbf{the Best EduTech award} (2021)}
           \resumeItem{3D scene reconstruction, understanding, and assembly projects}
-          \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} project receives 1.9k GitHub stars}
+          \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} project (1.9k GitHub stars)}
           \resumeItem{3.9k Google Scholar citations (as of Nov. 2021)}
         \resumeItemListEnd
     \resumeSubheading
       {Staff Research Scientist}{Santa Clara, CA, USA}
       {Intelligent Systems Lab, Intel (Manager: Dr. Vladlen Koltun)}{Dec. 2015 -- March 2019}
         \resumeItemListStart
-          \resumeItem{\textbf{Co-founder of Open3D}: open-sourced 3D vision library, built from scratch, and receives 5.6k GitHub stars}
-          \resumeItem{Tanks and Temples: web-based photogrametry evaluation system}
-          \resumeItem{High quality 3D reconstruction algorithms}
-          \resumeItem{Geometry understanding: tangent convolutions and geometric features}
+          \resumeItem{\textbf{Co-founder of Open3D}: open-sourced 3D vision library, built from scratch (5.6k GitHub stars)}
+          \resumeItem{Tanks and Temples: a online evaluation system for photogrametry methods}
+          \resumeItem{High quality 3D reconstruction approaches}
+          \resumeItem{Geometry understanding: tangent convolutions and fully convolutional geometric features}
           \resumeItem{Advised intern students from Stanford University, U.C. Berkeley, and Carnegie Melon University}
         \resumeItemListEnd
     \resumeSubheading
