--- a/cv.tex
+++ b/cv.tex
@@ -138,7 +138,7 @@
       {Intelligent Systems Lab, Intel (Manager: Dr. Vladlen Koltun)}{Dec. 2015 -- March 2019}
         \resumeItemListStart
           \resumeItem{\textbf{Co-founder of Open3D}: open-sourced 3D vision library, built from scratch (5.6k GitHub stars)}
-          \resumeItem{Tanks and Temples: a online evaluation system for photogrametry methods}
+          \resumeItem{Tanks and Temples: an online evaluation system for photogrametry methods}
           \resumeItem{High quality 3D reconstruction approaches}
           \resumeItem{Geometry understanding: tangent convolutions and fully convolutional geometric features}
           \resumeItem{Advised intern students from Stanford University, U.C. Berkeley, and Carnegie Melon University}
