adding more arxiv papers & announcing new open3d release

--- a/cv.tex
+++ b/cv.tex
@@ -130,14 +130,14 @@
           \resumeItem{Selected as one of the \textbf{POSTECH's Representative Research Achievements} (2021)}
           \resumeItem{Received \textbf{Outstanding Online Class award} (2020) and \textbf{the Best EduTech award} (2021)}
           \resumeItem{3D scene reconstruction, understanding, and assembly projects}
-          \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} project (1.9k GitHub stars)}
-          \resumeItem{3.9k Google Scholar citations (as of Nov. 2021)}
+          \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} project (2.3k GitHub stars)}
+          \resumeItem{4.0k Google Scholar citations (as of Dec. 2021)}
         \resumeItemListEnd
     \resumeSubheading
       {Staff Research Scientist}{Santa Clara, CA, USA}
       {Intelligent Systems Lab, Intel (Manager: Dr. Vladlen Koltun)}{Dec. 2015 -- March 2019}
         \resumeItemListStart
-          \resumeItem{\textbf{Co-founder of Open3D}: open-sourced 3D vision library, built from scratch (5.6k GitHub stars)}
+          \resumeItem{\textbf{Co-founder of Open3D}: open-sourced 3D vision library, built from scratch (5.8k GitHub stars)}
           \resumeItem{Tanks and Temples: an online evaluation system for photogrametry methods}
           \resumeItem{High quality 3D reconstruction approaches}
           \resumeItem{Geometry understanding: tangent convolutions and fully convolutional geometric features}
@@ -174,8 +174,11 @@
 International
 \resumePublicationListStart
     \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{Instance-wise Occlusion and Depth Orders in Natural Scenes}{arXiv:2111.14562, 2021}{}
+    \publicationItem{Chunghyun Park, Yoonwoo Jeong, Minsu Cho, and \textbf{Jaesik Park}}{Fast Point Transformer}{arXiv:TBA, 2021}{}
+    \publicationItem{Junha Lee, Christopher Choy, and \textbf{Jaesik Park}}{Putting 3D Spatially Sparse Networks on a Diet}{arXiv:2112.01316, 2021}{}
     \publicationItem{Jaesung Choe*, Chunghyun Park*, Francois Rameau, \textbf{Jaesik Park}, and In So Kweon}{PointMixer: MLP-Mixer for Point Cloud Understanding}{arXiv:2111.11187, 2021}{(*Equal contribution)}
     \publicationItem{Jaesung Choe, Byeongin Joung, Francois Rameau, \textbf{Jaesik Park}, and In So Kweon}{Deep Point Cloud Reconstruction}{arXiv:2111.11704, 2021}{}
+    \publicationItem{Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and \textbf{Jaesik Park}}{Real-time Registration and Reconstruction with Cylindrical LiDAR Images}{arXiv:TBA, 2021}{}
     \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{Self-Supervised Real-time Video Stabilization}{The British Machine Vision Conference (\textbf{BMVC}), 2021}{}
     \publicationItem{Jungeon Kim, Hyomin Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{TextureMe: High-quality Textured Scene Reconstruction in Real-time}{ACM Transactions on Graphics (\textbf{ToG}), 2021}{}
     \publicationItem{Minguk Kang, Woohyeon Shim, Minsu Cho, and \textbf{Jaesik Park}}{Rebooting ACGAN: Auxiliary Classifier GANs with Stable Training}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}{}
