--- a/source/latex/publication.tex
+++ b/source/latex/publication.tex
@@ -3,8 +3,11 @@
 International
 \resumePublicationListStart
     \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{Instance-wise Occlusion and Depth Orders in Natural Scenes}{arXiv:2111.14562, 2021}{}
+    \publicationItem{Chunghyun Park, Yoonwoo Jeong, Minsu Cho, and \textbf{Jaesik Park}}{Fast Point Transformer}{arXiv:TBA, 2021}{}
+    \publicationItem{Junha Lee, Christopher Choy, and \textbf{Jaesik Park}}{Putting 3D Spatially Sparse Networks on a Diet}{arXiv:2112.01316, 2021}{}
     \publicationItem{Jaesung Choe*, Chunghyun Park*, Francois Rameau, \textbf{Jaesik Park}, and In So Kweon}{PointMixer: MLP-Mixer for Point Cloud Understanding}{arXiv:2111.11187, 2021}{(*Equal contribution)}
     \publicationItem{Jaesung Choe, Byeongin Joung, Francois Rameau, \textbf{Jaesik Park}, and In So Kweon}{Deep Point Cloud Reconstruction}{arXiv:2111.11704, 2021}{}
+    \publicationItem{Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and \textbf{Jaesik Park}}{Real-time Registration and Reconstruction with Cylindrical LiDAR Images}{arXiv:TBA, 2021}{}
     \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{Self-Supervised Real-time Video Stabilization}{The British Machine Vision Conference (\textbf{BMVC}), 2021}{}
     \publicationItem{Jungeon Kim, Hyomin Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{TextureMe: High-quality Textured Scene Reconstruction in Real-time}{ACM Transactions on Graphics (\textbf{ToG}), 2021}{}
     \publicationItem{Minguk Kang, Woohyeon Shim, Minsu Cho, and \textbf{Jaesik Park}}{Rebooting ACGAN: Auxiliary Classifier GANs with Stable Training}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}{}
