--- a/cv.tex
+++ b/cv.tex
@@ -333,10 +333,11 @@ Domestic
 
 \section{Talks}
 \resumeItemListStart
+    \resumeItem{Self-Calibrating Neural Radiance Fields, DGIST, Daegu, Republic of Korea, Aug. 2021}
     \resumeItem{Object Detection from Images or Point Clouds, LG Electronics, Seoul, Republic of Korea, Aug. 2021}
     \resumeItem{Self-Calibrating Neural Radiance Fields, Korea Institute of Science and Technology (KIST), Virtual, June 2021}
-    \resumeItem{Mentor session: how to become a professor, Conference on Computer Vision and Pattern Recognition (CVPR 2021), Virtual, June 2021}
-    \resumeItem{Recent work on Image Generation, Gwangju Institute of Science and Technology (GIST), Virtual, May 2021}
+    \resumeItem{Mentor Session: How to Become a Professor, Conference on Computer Vision and Pattern Recognition (CVPR 2021), Virtual, June 2021}
+    \resumeItem{Recent Work on Image Generation, Gwangju Institute of Science and Technology (GIST), Virtual, May 2021}
     \resumeItem{Point Cloud Registration using Hierachical Hough Transform, 33nd Workshop on Image Processing and Image Understanding (IPIU2021), Virtual, Feb. 2021}
     \resumeItem{3D Representations and Detections, Chungbuk University, Virtual, Jan. 2021}
     \resumeItem{Introduction to Computer Vision, Kyungbuk Science High School, Pohang, Republic of Korea, Aug. 2020}
