--- a/source/latex/talks.tex
+++ b/source/latex/talks.tex
@@ -1,5 +1,6 @@
 \section{Talks}
 \resumeItemListStart
+    \resumeItem{On overview of recent 3D vision methods, Harvard University, Boston, MA, USA (online), June 2022}
     \resumeItem{Self-Calibrating Neural Radiance Fields, DGIST, Daegu, Republic of Korea, Aug. 2021}
     \resumeItem{Object Detection from Images or Point Clouds, LG Electronics, Seoul, Republic of Korea, Aug. 2021}
     \resumeItem{Self-Calibrating Neural Radiance Fields, Korea Institute of Science and Technology (KIST), Virtual, June 2021}
